--- a/src/index.html
+++ b/src/index.html
@@ -4,15 +4,13 @@
 <head>
 	<meta charset="UTF-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Webpack</title>
+	<title>Formika</title>
 </head>
 
 <body>
-	<include src="./components/header.html"></include>
-	<img src="./assets/images/example.png" alt="" />
-	<video autoplay>
-		<source src="./assets/intro.mp4" type="video/mp4" />
-	</video>
+	<!-- <include src="./components/header.html"></include>-->
+
+	<a href="./main.html" style="font-size: 5rem;">Главная</a>
 </body>
 
 </html>
