add header and footer

--- a/src/main.html
+++ b/src/main.html
@@ -8,7 +8,11 @@
 </head>
 
 <body>
-
+	<div class="page">
+		<include src="./components/header.html"></include>
+		<main></main>
+		<include src="./components/footer.html"></include>
+	</div>
 </body>
 
 </html>
