add solution animation

--- a/src/main.html
+++ b/src/main.html
@@ -40,13 +40,15 @@
 									provider of
 									premium segment exhibition stand construction services. </div>
 								<div class="main-solutions__wrapper-text text-18">
-									<strong>We excel in designing and building bespoke, high-quality exhibition displays
+									<strong>We excel in designing and building bespoke, high-quality exhibition
+										displays
 										that captivate and impress at various events and exhibitions.</strong>
 									<button class="main-solutions__wrapper-btn btn hover" type="button">Get
 										presentation<span></span></button>
 								</div>
 							</div>
 							<div class="main-solutions__main-back">
+								<div class="main-solutions__main-back--bg"></div>
 								<div class="main-solutions__main-back--circle"></div>
 								<div class="main-solutions__main-back--overlay"></div>
 							</div>
