--- a/src/main.html
+++ b/src/main.html
@@ -19,7 +19,7 @@
 						<div class="main-banner__circle-small"></div>
 					</div>
 					<div class="main-banner__back">
-						<video autoplay loop preload="auto" muted poster="assets/images/main/video-load.jpg">
+						<video autoplay loop preload="auto" muted poster="./assets/images/main/video-load.jpg">
 							<source src="./assets/main-video.mp4" type="video/mp4">
 							<source src="./assets/main-video.webm" type="video/webm">
 						</video>
@@ -54,6 +54,268 @@
 							</div>
 						</div>
 						<div class="main-solutions__btn btn static">our cases<span></span></div>
+					</div>
+				</div>
+			</section>
+			<section class="main-projects">
+				<div class="main-projects__container container">
+					<div class="main-projects__inner">
+						<div class="main-projects__subtitle subtitle"><span></span> our cases</div>
+						<div class="main-projects__content">
+							<div class="main-projects__content-left">
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-5.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-6.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-7.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-8.webp" alt="">
+								</div>
+								<div class="main-projects__content-item--null">
+									<a class="main-projects__content-item--btn btn hover" href="#">show
+										more<span></span></a>
+								</div>
+							</div>
+							<div class="main-projects__content-right">
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-1.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-2.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-3.webp" alt="">
+								</div>
+								<div class="main-projects__content-item">
+									<img src="assets/images/main/main-4.webp" alt="">
+								</div>
+							</div>
+						</div>
+						<div class="main-projects__btn-wrapper">
+							<div class="main-projects__btn btn static">scroll down <span></span></div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main-map">
+				<div class="main-map__container container">
+					<div class="main-map__inner">
+						<div class="main-map__subtitle subtitle mobile"><span></span>geography of projects</div>
+						<div class="main-map__title h1">Our project on map</div>
+						<div class="main-map__content">
+							<div class="main-map__subtitle subtitle desktop"><span></span>geography of projects</div>
+							<div class="main-map__map">
+								<div class="main-map__map-info desktop">
+									<div class="main-map__map-info--tag">
+										<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+											viewBox="0 0 24 24" fill="none">
+											<path
+												d="M11.9989 13.43C13.722 13.43 15.1189 12.0331 15.1189 10.31C15.1189 8.58687 13.722 7.19 11.9989 7.19C10.2758 7.19 8.87891 8.58687 8.87891 10.31C8.87891 12.0331 10.2758 13.43 11.9989 13.43Z"
+												stroke="#727272" stroke-width="1.5" />
+											<path
+												d="M3.62166 8.49C5.59166 -0.169998 18.4217 -0.159997 20.3817 8.5C21.5317 13.58 18.3717 17.88 15.6017 20.54C13.5917 22.48 10.4117 22.48 8.39166 20.54C5.63166 17.88 2.47166 13.57 3.62166 8.49Z"
+												stroke="#727272" stroke-width="1.5" />
+										</svg>
+										<span class="text-18">Abu Dhabi</span>
+									</div>
+									<div class="main-map__map-info--title h3">USM spief</div>
+								</div>
+								<div class="main-map__map-marks">
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item active">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+									<div class="main-map__map-marks--item">
+										<svg xmlns="http://www.w3.org/2000/svg" width="56" height="61"
+											viewBox="0 0 56 61" fill="none">
+											<path
+												d="M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795Z"
+												fill="#785B08" />
+											<path fill-rule="evenodd" clip-rule="evenodd"
+												d="M0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z"
+												fill="#785B08" />
+										</svg>
+									</div>
+								</div>
+								<div class="main-map__map-bg">
+									<img src="assets/images/main/map.svg" alt="">
+								</div>
+							</div>
+							<div class="main-map__btn btn static">contacts <span></span></div>
+						</div>
+						<div class="main-map__map-info mobile">
+							<div class="main-map__map-info--tag">
+								<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+									fill="none">
+									<path
+										d="M11.9989 13.43C13.722 13.43 15.1189 12.0331 15.1189 10.31C15.1189 8.58687 13.722 7.19 11.9989 7.19C10.2758 7.19 8.87891 8.58687 8.87891 10.31C8.87891 12.0331 10.2758 13.43 11.9989 13.43Z"
+										stroke="#727272" stroke-width="1.5" />
+									<path
+										d="M3.62166 8.49C5.59166 -0.169998 18.4217 -0.159997 20.3817 8.5C21.5317 13.58 18.3717 17.88 15.6017 20.54C13.5917 22.48 10.4117 22.48 8.39166 20.54C5.63166 17.88 2.47166 13.57 3.62166 8.49Z"
+										stroke="#727272" stroke-width="1.5" />
+								</svg>
+								<span class="text-18">Abu Dhabi</span>
+							</div>
+							<div class="main-map__map-info--title h3">USM spief</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section class="main-contacts">
+				<div class="main-contacts__container container">
+					<div class="main-contacts__inner">
+						<div class="main-contacts__left">
+							<div class="main-contacts__title h1">Be in touch</div>
+							<div class="main-contacts__subtitle mobile">Here you will find all the necessary contact
+								information for feedback.</div>
+							<div class="main-contacts__info text-18 desktop">
+								<div><a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a></div>
+								<div><a href="mailto:info@formika.ru">info@formika.ru</a></div>
+								<div>2nd Zvenigorodskaya str., 13, building 41, Moscow</div>
+							</div>
+							<div class="main-contacts__team">
+								<strong class="text-20">join our team</strong>
+								<a class="main-contacts__team-btn btn hover" href="#">View job<span></span></a>
+							</div>
+						</div>
+						<div class="main-contacts__center">
+							<div class="main-contacts__center--bg"></div>
+							<div class="main-contacts__center--circle"></div>
+							<div class="main-contacts__center--overlay"></div>
+						</div>
+						<div class="main-contacts__right">
+							<div class="main-contacts__form-title h2 desktop">Send message</div>
+							<div class="main-contacts__form-item">
+								<div class="main-contacts__form-subtitle subtitle"><span></span>Contacts</div>
+								<div class="main-contacts__info text-18 mobile">
+									<div>
+										<span>phone number:</span>
+										<a href="tel:+7 (495) 981-5000">+7 (495) 981-5000</a>
+									</div>
+									<div>
+										<span>email:</span>
+										<a href="mailto:info@formika.ru">info@formika.ru</a>
+									</div>
+									<div>
+										<span>address:</span>
+										2nd Zvenigorodskaya str., 13, building 41, Moscow
+									</div>
+								</div>
+							</div>
+							<div class="main-contacts__form-item">
+								<div class="main-contacts__form-subtitle subtitle"><span></span>send message</div>
+								<form class="main-contacts__form form">
+									<div class="form-main">
+										<label class="form-label">
+											<input type="text" class="input" placeholder="name">
+										</label>
+										<label class="form-label">
+											<input type="email" class="input" placeholder="email">
+										</label>
+										<label class="form-label">
+											<input type="tel" class="input" placeholder="phone number">
+										</label>
+										<label class="form-label">
+											<input type="text" class="input" placeholder="message">
+										</label>
+									</div>
+									<div class="form__footer">
+										<label class="form-label">
+											<input type="file" class="input-file">
+											<div class="custom-file">
+												<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+													viewBox="0 0 24 24" fill="none">
+													<path
+														d="M12.3297 12.1499L9.85969 14.6199C8.48969 15.9899 8.48969 18.1999 9.85969 19.5699C11.2297 20.9399 13.4397 20.9399 14.8097 19.5699L18.6997 15.6799C21.4297 12.9499 21.4297 8.50992 18.6997 5.77992C15.9697 3.04992 11.5297 3.04992 8.79969 5.77992L4.55969 10.0199C2.21969 12.3599 2.21969 16.1599 4.55969 18.5099"
+														stroke="#727272" stroke-width="1.5" stroke-linecap="round"
+														stroke-linejoin="round" />
+												</svg>
+												<span>add file</span>
+											</div>
+											<div class="custom-preview"></div>
+										</label>
+										<button class="btn hover">send<span></span></button>
+									</div>
+								</form>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
