fix animation and add validation

--- a/src/main.html
+++ b/src/main.html
@@ -291,13 +291,14 @@
 								<form class="main-contacts__form form">
 									<div class="form-main">
 										<label class="form-label">
-											<input type="text" class="input" placeholder="name">
+											<input type="text" class="input" placeholder="name" data-required="true">
 										</label>
 										<label class="form-label">
-											<input type="email" class="input" placeholder="email">
+											<input type="email" class="input" placeholder="email" data-required="true">
 										</label>
 										<label class="form-label">
-											<input type="tel" class="input" placeholder="phone number">
+											<input type="tel" class="input" placeholder="phone number"
+												data-required="true" data-min-length="true">
 										</label>
 										<label class="form-label">
 											<input type="text" class="input" placeholder="message">
