--- a/src/main.html
+++ b/src/main.html
@@ -14,11 +14,7 @@
 		<div class="content">
 			<section class="main-banner">
 				<div class="main-banner__inner">
-					<div class="main-banner__title h1">Present your brand on top</div>
 					<div class="main-banner__btn btn static vertical">Scroll Down <span></span></div>
-					<div class="main-banner__circle">
-						<div class="main-banner__circle-small"></div>
-					</div>
 					<div class="main-banner__back">
 						<video autoplay loop preload="auto" muted poster="./assets/images/main/video-load.jpg">
 							<source src="./assets/main-video.mp4" type="video/mp4">
@@ -67,16 +63,20 @@
 						<div class="main-projects__content">
 							<div class="main-projects__content-left">
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-5.webp" alt="">
+									<img src="./assets/images/main/main-5.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-6.webp" alt="">
+									<img src="./assets/images/main/main-6.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-7.webp" alt="">
+									<video loop preload="auto" muted>
+										<source src="./assets/main-video.mp4" type="video/mp4">
+										<source src="./assets/main-video.webm" type="video/webm">
+									</video>
+									<img src="./assets/images/main/main-7.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-8.webp" alt="">
+									<img src="./assets/images/main/main-8.webp" alt="">
 								</div>
 								<div class="main-projects__content-item--null desktop">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
@@ -85,16 +85,20 @@
 							</div>
 							<div class="main-projects__content-right">
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-1.webp" alt="">
+									<img src="./assets/images/main/main-1.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-2.webp" alt="">
+									<video loop preload="auto" muted>
+										<source src="./assets/main-video.mp4" type="video/mp4">
+										<source src="./assets/main-video.webm" type="video/webm">
+									</video>
+									<img src="./assets/images/main/main-2.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-3.webp" alt="">
+									<img src="./assets/images/main/main-3.webp" alt="">
 								</div>
 								<div class="main-projects__content-item">
-									<img src="assets/images/main/main-4.webp" alt="">
+									<img src="./assets/images/main/main-4.webp" alt="">
 								</div>
 								<div class="main-projects__content-item--null mobile">
 									<a class="main-projects__content-item--btn btn hover" href="#">show
