--- a/src/main.html
+++ b/src/main.html
@@ -16,7 +16,8 @@
 				<div class="main-banner__inner">
 					<div class="main-banner__btn btn static vertical">Scroll Down <span></span></div>
 					<div class="main-banner__back">
-						<video autoplay loop preload="auto" muted poster="./assets/images/main/video-load.jpg">
+						<video autoplay playsinline loop preload="auto" muted
+							poster="./assets/images/main/video-load.jpg">
 							<source src="./assets/main-video.mp4" type="video/mp4">
 							<source src="./assets/main-video.webm" type="video/webm">
 						</video>
