--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
 				<!-- Список страниц -->
 				<ul class="index__list">
 					<li><a href="./main.html" style="font-size: 5rem;">Главная</a></li>
-					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
+					<li><a href="./project-detail.html" style="font-size: 5rem;">Детальная проекта</a></li>
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
 					<!-- <li><a href="./main.html" style="font-size: 5rem;">Главная</a></li> -->
