--- a/src/main.html
+++ b/src/main.html
@@ -15,7 +15,7 @@
 			<section class="main-banner">
 				<div class="main-banner__inner">
 					<div class="main-banner__btn btn static vertical">Scroll Down <span></span></div>
-					<div class="main-banner__back">
+					<div class="main-banner__back banner-back">
 						<video autoplay playsinline loop preload="auto" muted
 							poster="./assets/images/main/video-load.jpg">
 							<source src="./assets/main-video.mp4" type="video/mp4">
