--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -11,7 +11,34 @@
 	<include src="./components/header.html"></include>
 	<div class="page">
 		<div class="content">
-			<section class="project-banner"></section>
+			<section class="project-banner">
+				<div class="project-banner__inner">
+					<div class="project-banner__btn btn static vertical">Scroll Down <span></span></div>
+					<div class="project-banner__content">
+						<div class="project-banner__content-main">
+							<div class="project-banner__title h1">St. Petersburg International Economic Forum</div>
+							<div class="project-banner__description text-18">This annual Russian business event in the
+								economic
+								sphere, organized by the Russian government, SPIEF acts as the world's leading platform
+								for discussing key economic issues. It is a meeting place for the highest level
+								government officials and the business elite.</div>
+						</div>
+						<div class="project-banner__content-footer text-18">Russia, St. Petersburg</div>
+					</div>
+					<div class="project-banner__back banner-back">
+						<video autoplay playsinline loop preload="auto" muted
+							poster="./assets/images/project-detail/project-video.jpg">
+							<source src="./assets/project-banner.mp4" type="video/mp4">
+							<source src="./assets/project-banner.webm" type="video/webm">
+						</video>
+					</div>
+				</div>
+			</section>
+			<section class="project-content">
+				<div class="project-content__container container">
+					<div class="project-content__inner"></div>
+				</div>
+			</section>
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
